--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -125,40 +125,40 @@ jobs:
                   name: padloc-macos-${{ github.sha }}-unsigned.dmg
                   path: packages/electron/dist/*.dmg
                   if-no-files-found: error
-    macos_signed:
-        if: ${{ !github.event.inputs.targets || github.event.inputs.targets == 'All' || github.event.inputs.targets == 'macOS' }}
-        runs-on: macos-11
-        environment: ${{ github.event.inputs.environment || 'Local' }}
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version-file: ".nvmrc"
-            - uses: actions/cache@v3
-              with:
-                  path: |
-                      ~/.npm
-                      ~/.nvm
-                      node_modules
-                      packages/electron/node_modules
-                  key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
-            - name: Install dependencies
-              run: |
-                  npm i -g npm@8.2.0
-                  npm ci
-            - name: Build
-              run: |
-                  npm run electron:build
-              env:
-                  CSC_LINK: ${{ secrets.PL_MACOS_SIGNING_CERT_BASE64 }}
-                  CSC_KEY_PASSWORD: ${{ secrets.PL_MACOS_SIGNING_CERT_PASSWORD }}
-                  PL_PWA_URL: ${{ secrets.PL_PWA_URL }}
-            - name: Archive dmg
-              uses: actions/upload-artifact@v2
-              with:
-                  name: padloc-macos-${{ github.sha }}-signed.dmg
-                  path: packages/electron/dist/*.dmg
-                  if-no-files-found: error
+    #macos_signed:
+    #    if: ${{ !github.event.inputs.targets || github.event.inputs.targets == 'All' || github.event.inputs.targets == 'macOS' }}
+    #    runs-on: macos-11
+    #    environment: ${{ github.event.inputs.environment || 'Local' }}
+    #    steps:
+    #        - uses: actions/checkout@v3
+    #        - uses: actions/setup-node@v3
+    #          with:
+    #              node-version-file: ".nvmrc"
+    #        - uses: actions/cache@v3
+    #          with:
+    #              path: |
+    #                  ~/.npm
+    #                  ~/.nvm
+    #                  node_modules
+    #                  packages/electron/node_modules
+    #              key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+    #        - name: Install dependencies
+    #          run: |
+    #              npm i -g npm@8.2.0
+    #              npm ci
+    #        - name: Build
+    #          run: |
+    #              npm run electron:build
+    #          env:
+    #              CSC_LINK: ${{ secrets.PL_MACOS_SIGNING_CERT_BASE64 }}
+    #              CSC_KEY_PASSWORD: ${{ secrets.PL_MACOS_SIGNING_CERT_PASSWORD }}
+    #              PL_PWA_URL: ${{ secrets.PL_PWA_URL }}
+    #        - name: Archive dmg
+    #          uses: actions/upload-artifact@v2
+    #          with:
+    #              name: padloc-macos-${{ github.sha }}-signed.dmg
+    #              path: packages/electron/dist/*.dmg
+    #              if-no-files-found: error
     windows:
         if: ${{ !github.event.inputs.targets || github.event.inputs.targets == 'All' || github.event.inputs.targets == 'Windows' }}
         runs-on: windows-2019
