--- a/.github/workflows/build-web-extension.yml
+++ b/.github/workflows/build-web-extension.yml
@@ -59,6 +59,7 @@ jobs:
                   name: padloc-web-extension-${{ github.sha }}-unsigned
                   path: |
                       packages/extension/dist
+                      !packages/extension/dist/*.xpi
                       !packages/extension/dist/web-ext-artifacts
                   if-no-files-found: error
             #- name: Build ZIP for signing Chrome/Edge Extension
